--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Psychic Game</title>
+  </head>
 
-<head>
+  <body>
+    <h1>The Psychic Game</h1>
+
+    <p>
+      Guess what letter I'm thinking of
+      <br />
+      <br />
+      Wins:
+      <br />
+      <br />
+      Losses:
+      <br />
+      <br />
+      Guesses Left:
+      <br />
+      <br />
+      Your Guesses so far:
+    </p>
+  </body>
+</html>
