--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@
       Your Guesses so far:
     </p>
   </body>
-  <script src="./javascript/game.js"></script>
+  <script src="./assets/javascript/game.js"></script>
 </html>
