changed to else if for user guess !== com aws and guess left; changed guess left < 0 to try to reset. Didn't work going try to loop it as well as the computer choice for 9 trys

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <div id="lose">Losses:</div>
       <br />
       <br />
-    <div id="guessLeft"> Guesses Left:</div>
+    <div id="numLeft"> Guesses Left:</div>
       <br />
       <br />
-    <div id="userGuess"> Your Guesses so far: </div>
+    <div id="guess"> Your Guesses so far: </div>
    
   </body>
   <script src="./assets/javascript/game.js"></script>
