able to get have the guesses left actually countdown on the web page; Guesses Left appears twice on the window; going to fix HTML to not have guesses left repeat itself

--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
     <p>
       Guess what letter I'm thinking of
     </p>
-      <br />
-      <br />
-    <div id="win"> Wins: </div>
-      <br />
-      <br />
-      <div id="lose">Losses:</div>
-      <br />
-      <br />
-    <div id="numLeft"> Guesses Left:</div>
-      <br />
-      <br />
-    <div id="guess"> Your Guesses so far: </div>
-   
+    <br />
+    <br />
+    <p>Wins: <div id="win"></div></p>
+    <br />
+    <br />
+    <p>Losses: <div id="lose"></div></p>
+    <br />
+    <br />
+    <p>Guesses Left: <div id="numLeft"></div></p>
+    <br />
+    <br />
+    <p>Your Guesses so far: <div id="guess"></div></p>
   </body>
   <script src="./assets/javascript/game.js"></script>
 </html>
